--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -33,4 +33,9 @@ Metrics/MethodLength:
   Enabled: false
 Metrics/AbcSize:
   Enabled: false
+Metrics/CyclomaticComplexity:
+  Enabled: false
+Metrics/BlockLength:
+  Enabled: false
+
 
